--- a/firebase.json
+++ b/firebase.json
@@ -3,8 +3,7 @@
     "public": "app",
     "ignore": [
       "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+      "**/.*"
     ],
     "headers": [
       {
@@ -20,7 +19,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "./app/index.html"
+        "destination": "/index.html"
       }
     ]
   },
